fix: bug where hero could not be focused on mobile
Former-commit-id: 6035a268676f7a8e1267c98dbfa828638dd0d092

--- a/packages/css/src/layouts.css
+++ b/packages/css/src/layouts.css
@@ -93,7 +93,7 @@
 
             >.hero {
                 min-width: 80%;
-                max-width: 1000px;
+                max-width: 90vw;
             }
 
             /* Fade out inactive documents */
